--- a/apps/landing/src/app/globals.css
+++ b/apps/landing/src/app/globals.css
@@ -6,6 +6,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.container {
+  @apply max-w-5xl px-5
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -32,7 +36,7 @@ body {
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
+    --radius: 0.75rem;
   }
   .dark {
     --background: 240 10% 3.9%;
