feat(webapp): add project due date field, implement project status management, and enhance project creation logic

--- a/apps/webapp/src/app/globals.css
+++ b/apps/webapp/src/app/globals.css
@@ -41,6 +41,12 @@ body {
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+
+    /* Additional colors */
+    --info-foreground: 200.4 98% 39.4%;
+    --progress-foreground: 40.6 96.1% 40.4%;
+    --success-foreground: 142.1 76.2% 36.3%;
+    --review-foreground: 271.5 81.3% 55.9%;
   }
   .dark {
     --background: 240 10% 3.9%;
