--- a/apps/landing/src/app/globals.css
+++ b/apps/landing/src/app/globals.css
@@ -7,7 +7,11 @@ body {
 }
 
 .container {
-  @apply max-w-5xl px-5 md:px-8
+  @apply max-w-6xl px-5 md:px-8;
+}
+
+.section {
+  @apply py-20;
 }
 
 @layer base {
