--- a/apps/webapp/src/app/globals.css
+++ b/apps/webapp/src/app/globals.css
@@ -43,10 +43,18 @@ body {
     --sidebar-ring: 217.2 91.2% 59.8%;
 
     /* Additional colors */
-    --info-foreground: 198.6 88.7% 48.4%;
-    --progress-foreground: 45.4 93.4% 47.5%;
-    --success-foreground: 142.1 70.6% 45.3%;
-    --review-foreground: 271.5 81.3% 55.9%;
+    /* --info-foreground: 198.6 88.7% 48.4%; */
+    /* --progress-foreground: 45.4 93.4% 47.5%; */
+    /* --success-foreground: 142.1 70.6% 45.3%; */
+    /* --review-foreground: 271.5 81.3% 55.9%; */
+
+    /* Project status */
+    --status-new: 198.6 88.7% 48.4%;
+    --status-todo: 198.6 88.7% 48.4%;
+    --status-proposal-sent: 45.4 93.4% 47.5%;
+    --status-in-progress: 330.4 81.2% 60.4%;
+    --status-in-review: 270.7 91% 65.1%;
+    --status-completed: 142.1 70.6% 45.3%;
   }
   .dark {
     --background: 240 10% 3.9%;
